# WinTools

./: CMakeLists.txt  README.md
AutoPicture/: .gitignore  AutoPicture.csproj  AutoPicture.sln  AutoPictureForm.Designer.cs  AutoPictureForm.cs  AutoPictureForm.resx  Program.cs  README.md
ControlColorExplorer/: ControlColorExplorer.Designer.cs  ControlColorExplorer.cs  ControlColorExplorer.csproj  ControlColorExplorer.resx  ControlColorExplorer.sln  Program.cs
DirectionalKeyInput/: DirInput.csproj  DirInput.sln  Form1.Designer.cs  Form1.cs  Form2.Designer.cs  Form2.cs  KeyboardForm.Designer.cs  KeyboardForm.cs  NotepadForm.Designer.cs  NotepadForm.cs  Program.cs  mapping.txt  mapping_v1.txt  stats.htm
FixCodeMarkers/: .gitignore  FixCodeMarkers.py  FixCodeMarkers.pyproj  FixCodeMarkers.sln
KeyboardSpeedReset/: Form1.Designer.cs  Form1.cs  Form1.resx  KeyboardSpeedReset.csproj  KeyboardSpeedReset.sln  Program.cs  README.txt  resources.txt
LoadDll/: .gitignore  CMakeLists.txt  LoadDll.cpp  prep-cmake.bat
SendConsoleKeys/: send_console_keys.cpp
WEPExplorer/: .gitignore  LICENSE.md  README.md  WEPExplorer.sln
WerFaultTool/: AboutForm.Designer.cs  AboutForm.cs  AboutForm.resx  Program.cs  README.md  Types.cs  WerFaultGUI.Designer.cs  WerFaultGUI.cs  WerFaultGUI.resx  WerFaultTool.csproj  WerFaultTool.sln
Wizmo/: .gitignore  CMakeLists.txt  StdAfx.cpp  StdAfx.h  Wizmo.cpp  Wizmo.h  WizmoConsole.cpp  WizmoConsole.sln  WizmoConsole.vcproj  WizmoConsole.vcxproj  WizmoConsole.vcxproj.filters  main.cpp  prep-cmake.bat
WorkingSet/: CMakeLists.txt  VerifyDll.cpp  (+3 more)
(+39 files in other folders)
